--- a/src/assets/css/Page14-15.css
+++ b/src/assets/css/Page14-15.css
@@ -14,6 +14,7 @@
 #p14 .back-content h1, #p15 .front-content h1 {
     position: absolute;
     z-index: 1000;
+    color: #ce8696;
 }
 
 #p14 .back-content div:first-child {
