--- a/src/assets/css/Page16.css
+++ b/src/assets/css/Page16.css
@@ -6,7 +6,7 @@
 
 #p16 .front-content h1 {
     z-index: 1000;
-    color: grey;
+    color: #b87919;
     position: absolute;
 }
 
@@ -37,6 +37,7 @@
 
 #p16 .front-content .col-6:first-child {
     padding-right: 5px;
+    padding-left: 5px;
 }
 
 #p16 .front-content .col-6 > div {
@@ -91,31 +92,40 @@
 }
 
 #p16 .back-content h1:nth-child(3) {
-    left: -50px;
     top: 100px;
-    left: -30px;
-    transform: rotate(-90deg);
+    left: 10px;
 }
 
 #p16 .back-content h1:nth-child(4) {
     left: 30px;
-    font-size: 80px;
-    transform: rotate(-90deg);
 }
 
 #p16 .back-content p:nth-child(5) {
     position:absolute;
-    left: -10px;
-    top: 130px;
-    width: 300px;
-    transform: rotate(-90deg);
+    right: 0px;
+    bottom: 50px;
+    width: 450px;
+    color: #fee23e;
 }
 
 @media screen and (min-width: 375px) and (max-width: 500px), (min-width: 701px) and (max-width: 1000px) {
+    #p16 .front-content h1:nth-child(2) {
+        top: 100px;
+    }
+
+    #p16 .front-content h1:nth-child(3) {
+        right: 20px;
+        top: 200px;
+    }
+
+    #p16 .back-content h1:nth-child(4) {
+        bottom: 90px;
+    }
+
     #p16 .back-content p:nth-child(5) {
-        left: 15px;
-        top: 80px;
-        width: 200px;
+        right: 15px;
+        bottom: 60px;
+        width: 350px;
     }
 
 }
@@ -133,14 +143,13 @@
 
     #p16 .back-content h1:nth-child(3) {
         top: 36px;
-        left: -25px;
     }
 
     #p16 .back-content p:nth-child(5) {
         font-size: 8px;
-        left: 10px;
-        top: 50px;
-        width: 130px;
+        right: 10px;
+        bottom: 20px;
+        width: 220px;
     }
 }
 
