--- a/src/assets/css/Cover.css
+++ b/src/assets/css/Cover.css
@@ -34,6 +34,10 @@
         bottom: 80px;
         font-size: 30px;
     }
+
+    #back-cover h1 {
+        font-size: 50px;
+    }
 }
 
 @media screen and (max-width: 375px), (min-width: 501px) and (max-width: 700px) {
