--- a/src/assets/css/Page12.css
+++ b/src/assets/css/Page12.css
@@ -25,7 +25,7 @@
 }
 
 #p12 .front-content > .row:nth-child(1) .col-4:nth-child(2) {
-    background-image: url('../img/Quang Ninh.jpg')
+    background-image: url('../img/Quy Nhon.jpg')
 }
 
 #p12 .front-content > .row:nth-child(1) .col-4:nth-child(3) {
@@ -59,13 +59,16 @@
 }
 
 @media screen and (min-width: 375px) and (max-width: 500px), (min-width: 701px) and (max-width: 1000px) {
-    #p11 .back-content h2, #p12 .front-content h2 {
-        font-size: 68px;
+    #p11 .back-content h2 {
+        font-size: 56px;
     } 
 }
 
 @media screen and (max-width: 375px), (min-width: 500px) and (max-width: 700px) {
-    #p11 .back-content h2, #p12 .front-content h2 {
-        font-size: 49px;
+    #p11 .back-content h2{
+        font-size: 40px;
     } 
+    #p12 .front-content h2 {
+        font-size: 60px;
+    }
 }
