--- a/src/assets/css/Page18.css
+++ b/src/assets/css/Page18.css
@@ -1,7 +1,4 @@
-#p17 .back-content {
-    padding-right: 0;
-    align-items: flex-start; 
-}
+
 
 #p18 .front-content {
     padding-left: 0;
@@ -29,6 +26,7 @@
     margin-left: 5px;
     margin-right: 0px;
 }
+
 
 #p17 .back-content div:first-child {
     margin-bottom: 5px;
@@ -64,4 +62,15 @@
 
 #p18 .front-content img:nth-child(2) {
     left: 0;
+}
+
+#p18 .back-content {
+    background: url(../img/HCM.jpg) no-repeat center center;
+    background-size: cover;
+}
+
+#p18 .back-content p {
+    background: rgba(0, 0, 0, 0.7);
+    color: #f1f1f1;
+    padding: 10px;
 }
