--- a/src/assets/css/Page5.css
+++ b/src/assets/css/Page5.css
@@ -25,13 +25,13 @@
 }
 
 #p5 .front-content p:nth-child(1) {
-    width: 260px;
+    width: 300px;
     top: 60px;
     left: 10px;
 }
 
 #p5 .front-content p:nth-child(2) {
-    width: 180px;
+    width: 400px;
     bottom: 20px;
     right: 50px;
 }
@@ -80,6 +80,12 @@
         height: 128px;
     }
 
+    #p5 .front-content p:nth-child(2) {
+        width: 200px;
+        bottom: 20px;
+        right: 50px;
+    }
+
     #p5 .back-content p {
         font-size: 11px;
     }
@@ -114,10 +120,6 @@
         width: 180px;
         bottom: 10px;
         right: 10px;
-    }
-
-    #p5 .back-content p {
-        font-size: 9px;
     }
 
     #p5 .back-content > .row > p:nth-child(2), #p5 .back-content > .row > p:nth-child(3) {
