--- a/src/assets/css/Page17.css
+++ b/src/assets/css/Page17.css
@@ -61,8 +61,8 @@
 }
 
 #p17 .back-content h1 {
-    left: 200px;
-    top: 200px;
+    right: 20px;
+    top: 220px;
 }
 
 #p18 .front-content h1 {
@@ -100,14 +100,13 @@
 
 @media (max-width: 375px), (min-width: 501px) and (max-width: 700px) {
     #p17 .back-content h1 {
-        left: 60px;
         top: 80px;
-        font-size: 28px;
+        font-size: 22px;
     }
 
     #p18 .front-content h1 {
         left: 8px;
         top: 120px;
-        font-size: 28px;
+        font-size: 22px;
     }
 }
