--- a/src/assets/css/Page4.css
+++ b/src/assets/css/Page4.css
@@ -1,12 +1,15 @@
 #p4 .front-content p {
     padding: 8px;
 }
-
-#p4 .front-content > .row {
-    flex-direction: column;
+#p4 .front-content {
+    justify-content: space-evenly;
 }
 
-#p4 .front-content > .row:nth-child(2) > .row:nth-child(1) .col-6:first-child, #p4 .front-content > .row:nth-child(2) > .row:nth-child(2) .col-6:nth-child(2) {
+#p4 .front-content > .row {
+    height: 33.3%;
+}
+
+#p4 .front-content > .row:nth-child(2) .col-6:first-child, #p4 .front-content > .row:nth-child(3) .col-6:nth-child(2) {
     background-image: url('../img/DL (14).jpg');
     background-position: center;
     background-repeat: no-repeat;
@@ -14,7 +17,7 @@
     height: 100%;
 }
 
-#p4 .front-content > .row:nth-child(2) > .row:nth-child(2) .col-6:nth-child(2) {
+#p4 .front-content > .row:nth-child(3) .col-6:nth-child(2) {
     background-image: url('../img/DL (15).jpg');
 }
 
