--- a/src/assets/css/Page7.css
+++ b/src/assets/css/Page7.css
@@ -95,6 +95,10 @@
     #p7 .back-content p:nth-child(4) {
         padding: 20px;
     }
+
+    #p7 .back-content > div:nth-child(3) {
+        height: 225px;
+    }
 }
 
 @media screen and (max-width: 375px), (min-width: 501px) and (max-width: 700px) {
@@ -121,6 +125,6 @@
     }
 
     #p7 .back-content > div:nth-child(3) {
-        height: 200px;
+        height: 150px;
     }
 }
