--- a/src/assets/css/Paper.css
+++ b/src/assets/css/Paper.css
@@ -49,7 +49,7 @@ body {
 }
 
 #bg-lg, #bg-sm {
-    height: 96vh;
+    height: 95vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -167,7 +167,7 @@ img {
 }
 
 #footer {
-    height: 4vh;
+    height: 5vh;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -180,6 +180,17 @@ img {
 
 #footer > p {
     color: grey;
+}
+
+@media screen and (max-width: 500px) {
+    #footer > p:first-child {
+        color: black;
+        font-size: 12px;
+        padding-right: 2px;
+        padding-left: 5px;
+        font-weight: bold;
+        background-color: white;
+    }
 }
   
   
