--- a/src/assets/css/Page18.css
+++ b/src/assets/css/Page18.css
@@ -70,7 +70,7 @@
 }
 
 #p18 .back-content p {
-    background: rgba(0, 0, 0, 0.7);
+    background: grey;
     color: #f1f1f1;
     padding: 10px;
 }
